fixed spacing issues on the menu page

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -9,7 +9,6 @@ body {
 	margin: 0;
 	background-color: black;
 	color: #fff;
-	font-family: 'Inter', sans-serif;
 }
 
 main {
